[project]
name = "listar-templates"
version = "0.1.0"
description = "Aplicação Streamlit para listar e filtrar templates do BotMaker WhatsApp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]
